# internal/entity/user/model.go
@@ -1,16 +1,16 @@
 package user
 
-import "mail-phone-auth/internal/entity"
+import (
+	"mail-phone-auth/internal/entity"
+)
 
-// type Data struct {
-// 	Name  *string `json:"name"`
-// 	Phone *string `json:"phone" validate:"omitempty,e164"`
-// 	Email string `json:"email" validate:"required,email"`
-// }
-
-type User struct {
-	entity.Data
+type UserData struct {
 	Name  *string `json:"name" gorm:"column:name;comment:Имя пользователя;default:null;"`
-	Phone *string `json:"phone" gorm:"column:phone;comment:Номер телефона;unique;default:null;"`
-	Email string `json:"email" gorm:"column:email;comment:Электронная почта;unique;not null;"`
+	Phone *string `json:"phone" validate:"omitempty,e164" gorm:"column:phone;comment:Номер телефона;unique;default:null;"`
+	Email string `json:"email" validate:"required,email" gorm:"column:email;comment:Электронная почта;unique;not null;"`
+}
+
+type User struct{
+	entity.GeneralData
+	UserData
 }
